journal,screentime,matching

--- a/journal.html
+++ b/journal.html
@@ -102,6 +102,9 @@
 
 	</table>
 
+<h1>February 1, 2021</h1>
+<p>Yes, it's February. Yay! Very happy with the screen time codesketch, in a very good place! Had some trouble formatting the color key in a more conventional map-like kind of way, but, hey, it looks great right now, so I'm happy. Did a lot of work on the css with the positioning of everything, and it's looking AWESOME. Stoked! Also, revisited the matching game in the last hour: found a technical hiccup with Math.random and now the random color animation is working well. I put that as a codesketch in the projects page. Going forward this week, want to go forward with the matching game and start thinking about a Valentine's codesketch (as well as creating a website for EcoQuest :). Overall, super happy with the progress! See y'all soon! Have a good night! Take care.</p>
+
 <h1>January 25, 2021</h1>
 <p>
 	Getting super late, so going to make this a quick one. This week, I had a lab with Ms. Josephs and continued to work on the screen time codesketch. All the functionality is working well, able to get all 21 circles or 'bubbles' appear on the screen with their size dictated by their input value (total number of minutes on phone that day). Looks good, even got them to have random positioning. Colors are a bit sporadic, want them to be varying degrees of orange with the bigger bubbles being darker and the smaller ones being lighter. But it's working well, so I'm happy about the progress. For some reason the <= functionality for less than or equal to was not working yesterday but tried it today and good as far as I know. Going to update the projects page with a draft of the screen time codesketch and then head to bed. Have a good night! Oh, also, I got the favicon for my website (the logo in the browser bar) working smoothly, so super excited about that too! Hopefully see you soon!
