--- a/projects.html
+++ b/projects.html
@@ -62,18 +62,23 @@
 
 		p{
 			font-family: 'Shadows Into Light', cursive;
-			color: rgb(60, 60, 60);
-			font-size:16px;
+			font-size:21px;
+			color:#fff310;
+			text-anchor:top;
 		}
 
 		img{
-			border: 1px solid #555;
+			border: 0.05px solid rgb(236, 181, 255);
 			position: relative;
 			top:0%;
 		}
 
 		#EarsUp{
 			position:relative;
+		}
+
+		.nobord{
+			border:none;
 		}
 
 	</style>
@@ -150,11 +155,11 @@
 		</td>
 
 		<td>
-			<a href="matching.draft.html"><h1>Matching Game!</h1></a>
+			<a href="refresher1.html"><h1>H20 for Life - Water Guardians Program!</h1></a>
 		</td>
 
 		<td>
-			<a href="refresher1.html"><h1>H20 for Life - Water Guardians Program!</h1></a>
+			<a href="refresher3.html"><h1>Favorite Foods!</h1></a>
 		</td>
 	</tr>
 
@@ -164,25 +169,24 @@
 		</td>
 
 		<td>
-			<a href="matching.draft.html"><img id="MatchingGame" src="MatchingGamePic.png" width="80%%"></a>
+			<a href="refresher1.html"><img src="WaterGuardiansPic.png" width="85%"></a>
 		</td>
 
 		<td>
-			<a href="refresher1.html"><img src="WaterGuardiansPic.png" width="80%"></a>
+			<a href="refresher3.html"><img src="FavoriteFoodsPic.png" width="80%"></a>
 		</td>
 	</tr>
 
 	<!-- Third Set --> 
 
 	<tr>
-
-		<td>
-			<a href="refresher3.html"><h1>Favorite Foods!</h1></a>
-		</td>
-
-		<td>
+		<td valign="top">
 			<a href="screentime.html"><h1>Screen Time</h1></a>
 		</td>
+
+		<td>
+			<a href="matching.v1.color-animation.html"><h1>Matching Game: <span style="color:#fff310">Color Animation</span></h1></a>
+		</td> 
 
 		<!-- <td>
 			<a href=""><h1></h1></a>
@@ -191,16 +195,12 @@
 
 	<tr>
 		<td>
-			<a href="refresher3.html"><img src="FavoriteFoodsPic.png" width="80%"></a>
-		</td>
-
-		<td>
 			<a href="screentime.html"><img src="ScreenTimePic.png" width="80%"></a>
 		</td>
 
-		<!-- <td>
-			<a href=""><img src="" width="80%"></a>
-		</td> -->
+		<td>
+			<a href="matching.v1.color-animation.html"><img class="nobord" src="MatchingGame1Pic.png" width="80%"></a>
+		</td>
 	</tr>
 </table>
 
