--- a/matching.v1.color-animation.html
+++ b/matching.v1.color-animation.html
@@ -4,17 +4,25 @@
 
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
+	<link href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&family=Bad+Script&family=Shadows+Into+Light&display=swap" rel="stylesheet"> 
+
 	<title>Matching Game: Color Animation!</title>
 			
 	<style type="text/css">
+		body{
+			background-color: black;
+		}
+
 		#box{
-			width:100px;
-			height:100px;
-			position:absolute;
+			width:300px;
+			height:300px;
+			position:relative;
 			background-color:lightblue;
 			animation-duration:2s;
 			animation-iteration-count: 1;
 			animation-name:;
+			margin:auto;
+			border:1px groove white;
 		}
 
 		@keyframes red{
@@ -40,10 +48,29 @@
 			50%{background-color:green;}
 			100%{background-color:lightblue;}
 		}
+
+		p{
+			font-family: 'Shadows Into Light', cursive;
+			font-size:21px;
+			position: relative;
+			color:white;
+		}
+
+		h2{
+			font-family: 'Annie Use Your Telescope', cursive;
+			font-size:32px;
+			color:white;
+		}
 	</style>
 
 </head>
 <body>
+
+	<center><h2>Matching Game: Color Animation</h2></center>
+
+	<center><p>Hey all! Here is the color animation part of the matching game. Click on the square to see some of the animations. Enjoy!</p></center>
+
+	<br><br>
 
 	<div id="box"></div>
 
