--- a/journal.html
+++ b/journal.html
@@ -102,6 +102,24 @@
 
 	</table>
 
+<h1>February 17, 2021</h1>
+<p>
+	It's been a minute, wow. No real updates, just going to use this space to outline what I need to do in the next week or so. 
+	<ul>
+		<li>Spend 1-2 hours working on the matching game, broken up as follows: half an hour tomorrow evening, half an hour Friday morning, and any extra time I have on Sunday.</li>
+		<li>
+			For the matching game project, here are some goals for the next codesketch,
+			<li>Create four squares, each having a specific color animation (that stays with them).</li>
+			<li>No two squares can have the same color animation</li>
+			<li>Each animation has a specific number which is printed in the console when it plays.</li>
+		</li>
+		<li>Later on, we can work on the following conditional: if two of the same number are printed back-to-back in the console, the two squares disappear. This is basically the arc of the matching point and what I'm aiming for.</li>
+		<li>All my codesketches look really presentable, an idea for the birthday search game: c23rm.github.io asks the user whether they would like level 1-10, and based on their answer the letters are either completely hidden or you can see them faintly. Also would love to have a working timer like that. This was an important codesketch to me, and I'm hoping to really display this one when we do our 'story' presenting in March.</li>
+	</ul>
+
+	<p>Jotting my ideas down here really helped clarify what I need to do going forward, so happy I spent some time writing these down. Also really want to get started on my EcoQuest project, might brainstorm some to-do lists in this journal too about my goals for that. Take care.</p>
+</p>
+
 <h1>February 1, 2021</h1>
 <p>Yes, it's February. Yay! Very happy with the screen time codesketch, in a very good place! Had some trouble formatting the color key in a more conventional map-like kind of way, but, hey, it looks great right now, so I'm happy. Did a lot of work on the css with the positioning of everything, and it's looking AWESOME. Stoked! Also, revisited the matching game in the last hour: found a technical hiccup with Math.random and now the random color animation is working well. I put that as a codesketch in the projects page. Going forward this week, want to go forward with the matching game and start thinking about a Valentine's codesketch (as well as creating a website for EcoQuest :). Overall, super happy with the progress! See y'all soon! Have a good night! Take care.</p>
 
