--- a/journal.html
+++ b/journal.html
@@ -102,6 +102,14 @@
 
 	</table>
 
+<h1>February 23, 2021</h1>
+<p>For the last hour, I added user input to the birthday codesketch, allowing them to control the difficulty of the game, which is the opacity of the letters. I also added a final message saying, "Happy Birthday, ____!" The blank is also filled in as a user input. <br><br>
+
+I talked about how in November, I wanted to do more with my gratitude codesketch but would be "somewhat content" if I left it as is. I think that's how I felt with the birthday codesketch too. I felt like there was more I could add to the story arc/game flow, and I think I added something cool today. Of course there is some centering I could do asthetically, but I'm happy with where the birthday game is now. Here's an analogy: I built a desk last November. A couple weeks ago, I smoothed out the paint, and today I added some 'pop' and some color. Feels good. I'm happy!<br><br>
+
+Feel rejuvinated after a little computer science break, and I'm excited with how my projects are looking and some things that I would like to work on going forward. It's a little bit of a struggle now, but I know I'll feel accomplished if I can get an MVP-version of the matching game down. Also, if I have time, maybe I could use an object to do some Australian Open visual recap? Have some homework to do, so I have to go. Good night!
+</p>
+
 <h1>February 17, 2021</h1>
 <p>
 	It's been a minute, wow. No real updates, just going to use this space to outline what I need to do in the next week or so. 
