--- a/journal.html
+++ b/journal.html
@@ -102,6 +102,9 @@
 
 	</table>
 
+<h1>March 1, 2021</h1>
+<p>Quick update: added a dropdown time of day codesketch. Not a major project, but learned how to use a dropdown menu and enhanced my css skills especially with positioning, display, and hex codes. Also, five pages (and more testing ones) were involved here, so a lot going on. Sachi had an idea for a Days of the Week dropdown using emojis to represent each day, so a lot of the credit for this codesketch idea (and the fonts :) goes to her. Talk to you later! Best Wishes, Raam</p>
+
 <h1>February 23, 2021</h1>
 <p>For the last hour, I added user input to the birthday codesketch, allowing them to control the difficulty of the game, which is the opacity of the letters. I also added a final message saying, "Happy Birthday, ____!" The blank is also filled in as a user input. <br><br>
 
