--- a/projects.html
+++ b/projects.html
@@ -188,9 +188,9 @@
 			<a href="matching.v1.color-animation.html"><h1>Matching Game: <span style="color:#fff310">Color Animation</span></h1></a>
 		</td> 
 
-		<!-- <td>
-			<a href=""><h1></h1></a>
-		</td>  -->
+		<td>
+			<a href="colortime.html"><h1>Times of Day.</h1></a>
+		</td> 
 	</tr>
 
 	<tr>
@@ -200,6 +200,10 @@
 
 		<td>
 			<a href="matching.v1.color-animation.html"><img class="nobord" src="MatchingGame1Pic.png" width="80%"></a>
+		</td>
+
+		<td>
+			<a href="colortime.html"><img src="TimesofDayPic.png" width="80%"></a>
 		</td>
 	</tr>
 </table>
