--- a/story.html
+++ b/story.html
@@ -11,29 +11,59 @@
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css" id="theme">
+		<link rel="stylesheet" href="dist/theme/night.css" id="theme">
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css" id="highlight-theme">
+
+		<style type="text/css">
+
+		</style>
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Raam's Comp-Sci Story (3/16/21)</section>
-				<section>So I thought this story would be about something else...</section>
-				<section>Some of the ways I liked to express myself through my work</section>
+				<section>Raam's Comp-Sci Story (3/09/21)</section>
 				<section>
-					Through Colors:
-					<a href="colortime.html" target="_blank"><img src="TimesofDayPic.png"></a>
+					So here's my story...
+					<img src="parrot.png" height="450px">
+				</section>
+				<section><a href="https://image.winudf.com/v2/image/Y29tLkVUQy5GaW5kUGljdHVyZV9zY3JlZW5zaG90c18zXzhmMGE2ZTE2/screen-3.jpg?fakeurl=1&type=.jpg">So I wanted to work on this matching game.</a></section>
+				<section>
+					Here's where I'm at so far:
+					<a href="matching.v1.color-animation.html" target="_blank"><img src="MatchingGame1Pic.png" height="500px"></a>
 				</section>
 				<section>
-					<a href="screentime.html" target="_blank"><img src="ScreenTimePic.png"></a>
+					<a href="matching.v2.stick-with-it-colors.html">
+						<img src="MatchingGame2Pic.png">
+					</a>
 				</section>
 				<section>
-					<a href="matching.v1.color-animation.html" target="_blank"><img src="MatchingGame1Pic.png"></a>
+					But something was missing...
 				</section>
 				<section>
-					Others were more intended for others, but they're still somewhat a reflection of it.
+					I was taking ideas from a game that I sort-of liked.
+				</section>
+				<section>
+					The project didn't say 'me'.
+				</section>
+				<section>
+					So I decided to switch things up.
+				</section>
+				<section>
+					<iframe src="https://giphy.com/embed/ZD3QH3MD0H1JoI9xGM" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/nickjr-marshall-pups-paw-patrol-ZD3QH3MD0H1JoI9xGM">via GIPHY</a></p>
+				</section>
+				<section>
+					<a href="colortime.html" target="_blank"><img src="TimesofDayPic.png" height="550px"></a>
+				</section>
+				<section>
+					<a href="gratitude.html" target="_blank"><img src="GratitudeProjectPic.png" height="550px"></a>
+				</section>
+				<section>
+					<a href="birthday.html" target="_blank"><img src="BirthdayPic.png"></a>
+				</section>
+				<section>
+					Thank you so much! :)
 				</section>
 			</div>
 		</div>
