--- a/journal.html
+++ b/journal.html
@@ -102,6 +102,16 @@
 
 	</table>
 
+<h1>April 4, 2021</h1>
+<p>Well, this is the day before school starts up again I guess. I would just like to say thank you to Ms. Josephs for an amazing class (I learned so much!), for pushing me to explore new things, and for supporting me in finding my identity. I know for sure that I will continue to seek out your advice and spend time soaking in your knowledge. I guess comp-sci two tomorrow will be fun, we'll see. Excited to keep going even though spring break has now ended. I loved this class and will definitely miss it. Take care, for the last time, and just thank you. I loved writing :) <3
+	<center>
+		<p>
+			Best Wishes, <br>
+			Raam
+		</p>
+	</center>
+</p>
+
 <h1>March 8, 2021</h1>
 <p>Hey! Update: added step 2 of the matching game codesketch. Now a color animation sticks with a specific square. It was not working before so basically duplicated my step 1 and altered some things and it ended up being fine. I'll take it! So added that codesketch to my projects page. Step 3 coming up which is: if two of the same color appears back to back in the console, the squares disappear. Excited. Also added an in-progress version of my story project to the about page. Thank you! Talk later. Best Wishes, Raam</p>
 
